[package]
name = "sunshine_indra"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indradb-lib = { version = "2", features = ["sled-datastore"] }
serde_json = "1.0.68"
lazy_static = "1.4.0"
sonnerie = "0.6.1"
nom = "7.0.0"
bincode = "1.3.3"
uuid = "0.8.2"
thiserror = "1.0.30"
indradb-proto = "2.1.0"

[dependencies.serde]
version = "1.0.130"
features = ["derive"]
